# spierscraper

./: .envrc  .gitignore  CLAUDE.md  Makefile  README.md  config.example.yaml  flake.nix  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml
docs/: decision-log.md  implementation-plan.md  plan.md
src/spierscraper/: __init__.py  __main__.py  cache.py  config.py  filters.py  models.py  notifier.py  scraper.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_filters.py  test_notifier.py  test_scraper.py
